added details on how to start the StudentApp, its requirements, and port conflict remediation